# web-pages-parser-in-cluster

./: .gitignore  CMakeLists.txt  README.md  analysis.txt  crawlerDistribuido.cpp  crawlerParalelo.cpp  crawlerSequencial.cpp  out.txt  outDIS.txt  outPAR.txt  outSEQ.txt  run.py  semaphore.cpp
Relatorio/: Relatorio - Projeto3 SuperComp.ipynb  Relatorio - Projeto3 SuperComp.md  esquemas.pptx
Relatorio/.ipynb_checkpoints/: .ipynb-checkpoint  Relatorio - Projeto2 SuperComp-checkpoint.ipynb  Relatorio - Projeto3 SuperComp-checkpoint.ipynb
hostfiles/: host2  host3  host4  host5  host6
